--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="title" content="The Jack's Dogs Family">
   <meta name="description" content="This is the Official Jack's Dogs Family Site.">
   <meta name="keywords" content="iSC, iSC Host, iSC Server, Jack's Dogs Family, Official, ACS, Mission Verlag, iSC Entertainment, ACS Films">
-  <link type="text/plain" rel="author" href="authors.txt">
+  <link type="text/plain" rel="author" href="humans.txt" />
 
 <!-- DOMAIN -->
   <base href="http://jacks-dogs-family.isc" />
