--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en-us">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,11 +25,21 @@
         <link rel="shortlink" href="http://jdsf.isc">
 
   <!-- ICON(S) -->
-        <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+    <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
   <!-- STYLESHEET(S) -->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
+    <!-- build:css css/main.css -->
+        <link rel="stylesheet" href="css/_normalize.css">
+        <link rel="stylesheet" href="css/_base.css">
+        <link rel="stylesheet" href="css/_utils.css">
+        <link rel="stylesheet" href="css/_components.css">
+        <link rel="stylesheet" href="css/_site.css">
+        <link rel="stylesheet" href="css/_mq.css">
+        <link rel="stylesheet" href="css/_print.css">
+    <!-- endbuild -->
 
   <!-- SCRIPT(S) -->
         <script src="js/vendor/modernizr-2.8.0.min.js"></script>
@@ -63,10 +73,208 @@
 <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is "The Jack's Dogs Family" Website!!!</p>
+        <div class="container">
+            <div class="site-header clearfix" role="banner">
+                <div class="site-logo">
+                    <span class="star">&#x2605;</span> The Jack's Dogs Family
+                </div>
+                <ul class="site-nav inline-block-list">
+                    <li><a href="comics.html"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Nav click"
+                           data-ga-label="View Comic Gallery">Comics</a></li>
+                    <li><a href="videos.html"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Nav click"
+                           data-ga-label="View the Videos">Videos</a></li>
+                    <li><a href="about.html"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Nav click"
+                           data-ga-label="About us">About</a></li>
+                </ul>
+            </div>
+        <!-- end site-header -->
+
+            <div class="site-promo">
+                <h1>We are waiting for you!</h1>
+                <p class="description">The funniest comic and animation in the world!!!</p>
+
+                <div class="cta-option">
+                    <a class="btn btn-comics"
+                       href="comics.html"
+                       data-ga-category="Comics"
+                       data-ga-action="Comics - top"
+                       data-ga-label="for you!">
+                        <strong>Comics</strong>
+                        <span class="version">for you!</span>
+                    </a>
+                    <a class="hint-message"
+                       href="contact.html"
+                       data-ga-category="Outbound links"
+                       data-ga-action="Sent us a hint!"
+                       data-ga-label="Hint">
+                        Send us a hint!
+                    </a>
+                </div>
+
+                <div class="cta-option">
+                    <a class="btn btn-alt"
+                       href="videos.html"
+                       data-ga-category="Outbound links"
+                       data-ga-action="Videos"
+                       data-ga-label="Videos">
+                        Videos
+                    </a>
+                </div>
+            </div>
+        <!-- end site-promo -->
+        </div>
+
+        <div class="site-section">
+            <div class="container">
+                <h2>Quotes for you!!!</h2>
+
+                <div class="grid">
+                    <div class="grid-cell">
+                        <h3><span class="star">&#x2605;</span> Espeñiol's quote</h3>
+                        <p>&#x2039; The true character of a dog is not at the first meeting but at the last! &#x203a;</p>
+                    </div>
+
+                    <div class="grid-cell">
+                        <h3><span class="star">&#x2605;</span> Dolinj's quote</h3>
+                        <p>&#x2039; Stupid people have unnecessary thoughts. Only the best, it does not hide! &#x203a;</p>
+                    </div>
+
+                    <div class="grid-cell">
+                        <h3><span class="star">&#x2605;</span> Jack Asbilph's quote</h3>
+                        <p>&#x2039; Take your work seriously, but never yourself! &#x203a;</p>
+                    </div>
+
+                    <div class="grid-cell">
+                        <h3><span class="star">&#x2605;</span> Quote of the whole Jack's Dogs Family</h3>
+                        <p>&#x2039; We all live under the same sky, but we do not all have the same horizon! &#x203a;</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="site-section site-section-video">
+            <h2>Trailer</h2>
+            <div class="content">
+                <div class="flex-embed">
+                    <a href="https://www.youtube.com/embed/XXXXXXXX?autoplay=1&amp;vq=hd720"
+                        data-ga-category="Outbound links"
+                        data-ga-action="Watch video"
+                        data-ga-label="Trailer">
+                        <img src="IMAGE LINK" width="480" height="360" alt="video thumbnail">
+                        <div class="play-btn"></div>
+                    </a>
+                </div>
+                <div class="cta-option">
+                    <a class="btn btn-alt"
+                       href="videos.html"
+                       data-ga-category="Outbound links"
+                       data-ga-action="Watch more video"
+                       data-ga-label="Video playlist">More videos -></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="site-section">
+            <h2>Characters</h2>
+            <p class="in-the-wild">
+                Jack Asbilph,
+                Espeniol,
+                Dolinj,
+                Lissi Asbilph,
+                Liz,
+                Jenny
+            </p>
+
+            <div class="cta-option">
+                <a class="btn btn-download"
+                    href="characters.html"
+                    data-ga-category="Characters"
+                    data-ga-action="Characters - bottom"
+                    data-ga-label="v4.3.0">
+                    <strong>view more</strong>
+                    <span class="Characters">CHARACTERS</span>
+                </a>
+            </div>
+        </div>
+
+        <div class="aside">
+            <div class="container">
+                <ul class="inline-block-list">
+                    <li><a href="/blog"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Footer click"
+                           data-ga-label="View our Blog!">
+                        <span class=""></span>
+                        Blog
+                    </a></li>
+                    <li><a href="/shop"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Footer click"
+                           data-ga-label="Buy in our Shop!">
+                        <span class=""></span>
+                        Shop
+                    </a></li>
+                    <li><a href="/wiki"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Footer click"
+                           data-ga-label="Contibute with us in our Wiki!">
+                        <span class=""></span>
+                        Wiki
+                    </a></li>
+                    <li><a href="/chat"
+                           data-ga-category="Outbound links"
+                           data-ga-action="Footer click"
+                           data-ga-label="Chat with us!">
+                        <span class=""></span>
+                        Chat
+                    </a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="site-footer" role="contentinfo">
+                <p>
+                    <a class="twitter-share-button"
+                       href="https://twitter.com/share"
+                       data-count="none"
+                       data-lang="en"
+                       data-via="SuriyaaKudoIsc"
+                       data-size="large"
+                       data-text="The Jack's Dogs Family: We are rocking you! ;-)"
+                       data-url="http://jdsf.isc">Tweet</a>
+                   &nbsp;
+                   <a class="twitter-follow-button"
+                      href="https://twitter.com/SuriyaaKudoIsc"
+                      data-show-count="false"
+                      data-lang="en"
+                      data-size="large">Follow @SuriyaaKudoIsc</a>
+                </p>
+
+                <p>A web project from <a href="https://github.com/iSC-Host/jdsf.isc">iSC Host</a> created and maintained by:<br>
+                   <a href="http://suriyaa.isc">Suriyaa Kudo</a>
+                </p>
+
+                <p>Comic drawed by<br>
+                    <a href="http://aahash.isc">Aahash de Ruffy</a>
+                </p>
+                <br />
+                <br />
+                <p>
+                <a href="http://suriyaa.isc">The Jack's Dogs Family © 2014 | iSC Entertainment & ACS Mission Verlag </a>
+                </p>
+                
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="js/jquery-1.11.1.min.js"><\/script>')</script>
+        <script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
