--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
   <!-- STYLESHEET(S) -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
     <!-- build:css css/main.css -->
-        <link rel="stylesheet" href="css/_normalize.css">
-        <link rel="stylesheet" href="css/_base.css">
-        <link rel="stylesheet" href="css/_utils.css">
-        <link rel="stylesheet" href="css/_components.css">
-        <link rel="stylesheet" href="css/_site.css">
-        <link rel="stylesheet" href="css/_mq.css">
-        <link rel="stylesheet" href="css/_print.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_normalize.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_base.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_utils.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_components.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_site.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_mq.css">
+        <link rel="stylesheet" href="http://html5boilerplate.com/css/_print.css">
     <!-- endbuild -->
 
   <!-- SCRIPT(S) -->
