--- a/index.html
+++ b/index.html
@@ -135,9 +135,11 @@
         <!-- Add your site or application content here -->
         <div class="container">
             <div class="site-header clearfix" role="banner">
+                <header>
                 <div class="site-logo">
                     <span class="star">&#x2605;</span> The Jack's Dogs Family
                 </div>
+                </header>
                 <ul class="site-nav inline-block-list">
                     <li><a href="comics.html"
                            data-ga-category="Outbound links"
