--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             
     <!-- STYLESHEET(S) -->
         <!-- Standard -->
-            <link rel="stylesheet" href="normalize.css">
-            <link rel="stylesheet" href="main.css">
+            <link rel="stylesheet" href="css/normalize.css">
+            <link rel="stylesheet" href="css/main.css">
             <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
 
         <!-- build:css css/main.css -->
