--- a/src/index.html
+++ b/src/index.html
@@ -81,18 +81,18 @@
             
     <!-- STYLESHEET(S) -->
         <!-- Standard -->
-            <link rel="stylesheet" href="css/normalize.css">
-            <link rel="stylesheet" href="css/main.css">
+            <link rel="stylesheet" href="assets/css/normalize.css">
+            <link rel="stylesheet" href="assets/css/main.css">
             <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
 
         <!-- build:css css/main.css -->
-            <link rel="stylesheet" href="css/_normalize.css">
-            <link rel="stylesheet" href="css/_base.css">
-            <link rel="stylesheet" href="css/_utils.css">
-            <link rel="stylesheet" href="css/_components.css">
-            <link rel="stylesheet" href="css/_site.css">
-            <link rel="stylesheet" href="css/_mq.css">
-            <link rel="stylesheet" href="css/_print.css">
+            <link rel="stylesheet" href="assets/css/_normalize.css">
+            <link rel="stylesheet" href="assets/css/_base.css">
+            <link rel="stylesheet" href="assets/css/_utils.css">
+            <link rel="stylesheet" href="assets/css/_components.css">
+            <link rel="stylesheet" href="assets/css/_site.css">
+            <link rel="stylesheet" href="assets/css/_mq.css">
+            <link rel="stylesheet" href="assets/css/_print.css">
         <!-- endbuild -->
 
     <!-- SCRIPT(S) -->
@@ -255,7 +255,7 @@
             </p>
 
             <div class="cta-option">
-                <a class="btn btn-download"
+                <a class="btn btn-characters"
                     href="characters.html"
                     data-ga-category="Characters"
                     data-ga-action="Characters - bottom"
@@ -335,10 +335,10 @@
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-1.11.1.min.js"><\/script>')</script>
+        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
         <script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="assets/js/plugins.js"></script>
+        <script src="assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
