--- a/src/404.html
+++ b/src/404.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/plain" rel="author" href="humans.txt" />
     <style>
 
         * {
