--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
             <meta name="keywords" lang="de" content="iSC Host, Jack's Dogs Family, Official, Mission Verlag, iSC Entertainment, ACS Films">
 
     <!-- DOMAIN(S) -->
-            <base href="http://jacks-dogs-family.isc" />
-            <link rel="canonical" href="http://jacks-dogs-family.isc">
+            <base href="http://isc-host.github.io/jdsf.isc/src" />
+            <link rel="canonical" href="http://isc-host.github.io/jdsf.isc/src">
             <link rel="mobile" href="http://m.jacks-dogs-family.isc">
             <link rel="shortlink" href="http://jdsf.isc">
 
