--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,8 @@
 
     </head>
     <body>
+<!-- START -->
+
         <!--[if lt IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -345,6 +347,7 @@
         ga('send', 'pageview');
 
         </script>
-        
-</body>
+
+<!-- END -->
+    </body>
 </html>
