--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en-us">
+<html class="no-js" lang="en">
     <head>
     <!-- COMPATIBLE -->
         <!-- HTML5 -->
