--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <!-- COMPATIBLE -->
         <!-- HTML5 -->
             <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- TITLE -->
             <title>The Jack's Dogs Family</title>
@@ -14,22 +14,33 @@
             <meta name="title" content="The Jack's Dogs Family">
             <meta name="description" content="This is the Official Jack's Dogs Family Site.">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- KEYWORDS -->
-        <!-- English -->
+            <link type="text/plain" rel="author" href="humans.txt" />
+            <meta name="date" content="2014-08-31">
+        <!-- Keywords-->
             <meta name="keywords" lang="en" content="iSC Host, Jack's Dogs Family, Official, Mission Verlag, iSC Entertainment, ACS Films">
-        <!-- German -->
             <meta name="keywords" lang="de" content="iSC Host, Jack's Dogs Family, Official, Mission Verlag, iSC Entertainment, ACS Films">
 
-    <!-- STATUS -->
-        <!-- Page -->
-            <link type="text/plain" rel="author" href="humans.txt" />
-            <meta name="date" content="2014-08-05">
+    <!-- STYLESHEET(S) -->
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
+            <!-- build:css css/main.css -->
+                <link rel="stylesheet" href="css/_normalize.css">
+                <link rel="stylesheet" href="css/_base.css">
+                <link rel="stylesheet" href="css/_utils.css">
+                <link rel="stylesheet" href="css/_components.css">
+                <link rel="stylesheet" href="css/_site.css">
+                <link rel="stylesheet" href="css/_mq.css">
+                <link rel="stylesheet" href="css/_print.css">
+            <!-- endbuild -->
 
-    <!-- LANG(UAGES) -->
-        <!-- Standard -->
-            <meta name="dc.language" content="en">
-            <meta name="geo.country" content="US">
+    <!-- SCRIPT(S) -->
+        <!-- Modernizr -->
+            <script src="js/vendor/modernizr-2.8.0.min.js"></script>
+
+    <!-- COMPONENT(S) -->
+        <!-- jQuery -->
+            <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/ui-darkness/jquery-ui.css" rel="stylesheet">
+            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 
     <!-- ROBOTS -->
         <!-- For all search machines (standard) -->
@@ -72,32 +83,6 @@
 
         <!-- Android devices -->
             <link rel="apple-touch-icon" href="/apple-touch-icon-precomposed.png"/>
-            
-    <!-- STYLESHEET(S) -->
-        <!-- Standard -->
-            <link rel="stylesheet" href="assets/css/normalize.css">
-            <link rel="stylesheet" href="assets/css/main.css">
-            <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
-
-        <!-- build:css css/main.css -->
-            <link rel="stylesheet" href="assets/css/_normalize.css">
-            <link rel="stylesheet" href="assets/css/_base.css">
-            <link rel="stylesheet" href="assets/css/_utils.css">
-            <link rel="stylesheet" href="assets/css/_components.css">
-            <link rel="stylesheet" href="assets/css/_site.css">
-            <link rel="stylesheet" href="assets/css/_mq.css">
-            <link rel="stylesheet" href="assets/css/_print.css">
-        <!-- endbuild -->
-
-    <!-- SCRIPT(S) -->
-        <!-- Modernizr -->
-            <script src="js/vendor/modernizr-2.8.0.min.js"></script>
-
-    <!-- COMPONENT(S) -->
-        <!-- jQuery -->
-            <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/ui-darkness/jquery-ui.css" rel="stylesheet">
-            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-            <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 
     <!-- PLAYER -->
         <!-- Video.js -->
