--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,13 @@
     <!-- STYLESHEET(S) -->
         <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
             <!-- build:css css/main.css -->
-                <link rel="stylesheet" href="assets/css/_normalize.css">
-                <link rel="stylesheet" href="assets/css/_base.css">
-                <link rel="stylesheet" href="assets/css/_utils.css">
-                <link rel="stylesheet" href="assets/css/_components.css">
-                <link rel="stylesheet" href="assets/css/_site.css">
-                <link rel="stylesheet" href="assets/css/_mq.css">
-                <link rel="stylesheet" href="assets/css/_print.css">
+                <link rel="stylesheet" href="assets/css/normalize.css">
+                <link rel="stylesheet" href="assets/css/base.css">
+                <link rel="stylesheet" href="assets/css/utils.css">
+                <link rel="stylesheet" href="assets/css/components.css">
+                <link rel="stylesheet" href="assets/css/site.css">
+                <link rel="stylesheet" href="assets/css/mq.css">
+                <link rel="stylesheet" href="assets/css/print.css">
             <!-- endbuild -->
 
     <!-- SCRIPT(S) -->
