--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             require.config({baseUrl: 'src/'});
             require(['main']);
         </script>
+
+        <!-- REDIRECT -->
+            <meta http-equiv="refresh" content="4; url=http://isc-host.github.io/jdsf.isc/src/" />
+
     </head>
     <body></body>
 </html>
