--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <script type="text/javascript" src="http://code.famo.us/famous/0.2/famous.min.js"></script>
 
             <!-- app code -->
-                <link rel="stylesheet" type="text/css" href="css/app.css" />
+                <link rel="stylesheet" type="text/css" href="src/assets/css/app.css" />
                 <script type="text/javascript">
-                    require.config({baseUrl: 'src/'});
+                    require.config({baseUrl: 'src/assets/js/'});
                     require(['main']);
                 </script>
 
