--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <link rel="stylesheet" type="text/css" href="src/assets/css/app.css" />
                 <script type="text/javascript">
                     require.config({baseUrl: 'src/assets/js/'});
-                    require(['main']);
+                    require(['redirect']);
                 </script>
 
         <!-- REDIRECT -->
