--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,20 @@
             <meta name="keywords" lang="de" content="iSC Host, Jack's Dogs Family, Official, Mission Verlag, iSC Entertainment, ACS Films">
 
     <!-- STYLESHEET(S) -->
-        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
+        <!-- Google Fonts -->
+            <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,700">
+        <!-- HTML5 Boilerplate -->
             <!-- build:css css/main.css -->
-                <link rel="stylesheet" href="assets/css/normalize.css">
-                <link rel="stylesheet" href="assets/css/base.css">
-                <link rel="stylesheet" href="assets/css/utils.css">
-                <link rel="stylesheet" href="assets/css/components.css">
-                <link rel="stylesheet" href="assets/css/site.css">
-                <link rel="stylesheet" href="assets/css/mq.css">
-                <link rel="stylesheet" href="assets/css/print.css">
+            <link rel="stylesheet" href="assets/css/normalize.css">
+            <link rel="stylesheet" href="assets/css/base.css">
+            <link rel="stylesheet" href="assets/css/utils.css">
+            <link rel="stylesheet" href="assets/css/components.css">
+            <link rel="stylesheet" href="assets/css/site.css">
+            <link rel="stylesheet" href="assets/css/mq.css">
+            <link rel="stylesheet" href="assets/css/print.css">
             <!-- endbuild -->
+        <!-- GitHub Octicons -->
+            <link rel="stylesheet" href="src/assets/css/vendor/octicons/octicons/octicons.css">
 
     <!-- SCRIPT(S) -->
         <!-- Modernizr -->
