--- a/src/index.html
+++ b/src/index.html
@@ -315,6 +315,12 @@
                 <br />
                 <p>
                 <a href="http://suriyaa.isc">The Jack's Dogs Family © 2014 | iSC Entertainment & ACS Mission Verlag </a>
+                
+                <div class="wrapper">
+                    <span class="made-with-heart">
+                    <span class="octicon octicon-pencil"></span> with <span class="octicon octicon-heart"></span> on <a href="https://github.com/iSC-Host/jdsf.isc" class="octicon octicon-logo-github"></a>
+                    </span>
+                </div>
                 </p>
                 
         </div>
