--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,13 @@
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 
+    <!-- BOWER -->
+        <!-- Moment.js -->
+        <script src="assets/vendor/moment/moment.js"></script>
+        <script>
+            moment().format();
+        </script>
+
     <!-- ROBOTS -->
         <!-- For all search machines (standard) -->
             <meta name="robots" content="noindex">
