--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
     <head>
         <!-- TITLE -->
@@ -24,7 +24,7 @@
                 <script type="text/javascript" src="http://code.famo.us/famous/0.2/famous.min.js"></script>
 
             <!-- app code -->
-                <link rel="stylesheet" type="text/css" href="src/assets/css/app.css" />
+                <link rel="stylesheet" type="text/css" href="src/assets/css/redirect.css" />
                 <script type="text/javascript">
                     require.config({baseUrl: 'src/assets/js/'});
                     require(['redirect']);
