--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
     <head>
+
     <!-- COMPATIBLE -->
         <!-- HTML5 -->
             <meta charset="UTF-8">
@@ -121,7 +122,7 @@
 
     </head>
     <body>
-<!-- START -->
+<!-- SITE START -->
 
         <!--[if lt IE 8]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -331,6 +332,9 @@
                 </p>
 
         </div>
+
+<!-- SITE END -->
+<!-- SCRIPT START -->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
