--- a/src/comics.html
+++ b/src/comics.html
@@ -174,7 +174,7 @@
             <div class="container">
                 <h2>Daily Comic</h2>
 
-                  <p class="daily_comic"><img src="images/dailycomic/2014/April/04.png" alt="The Jack's Dogs Family" width="" height="" border=""></p>
+                  <p class="daily_comic"><img src="http://placehold.it/800x200" alt="Use image form "images/dailycomic/2014/April/04.png"" width="" height="" border=""></p>
 
             </div>
         </div>
