--- a/src/videos.html
+++ b/src/videos.html
@@ -115,12 +115,12 @@
 
         <!-- VideoLightBox -->
     			<!-- Stylesheet(s) -->
-	      		<link rel="stylesheet" href="assets/videolb/videolightbox.css" type="text/css" />
-			      <link rel="stylesheet" href="assets/videolb/overlay-minimal.css" type="text/css" />
+	      		<link rel="stylesheet" href="assets/videolb/css/videolightbox.css" type="text/css" />
+			      <link rel="stylesheet" href="assets/videolb/css/overlay-minimal.css" type="text/css" />
 
     			<!-- Scripts -->
-		      	<script src="assets/videolb/jquery.js" type="text/javascript"></script>
-			      <script src="assets/videolb/swfobject.js" type="text/javascript"></script>
+		      	<script src="assets/videolb/js/jquery.js" type="text/javascript"></script>
+			      <script src="assets/videolb/js/swfobject.js" type="text/javascript"></script>
 
     <!-- GENERATOR(S) -->
         <!-- We use this editors to edit jdsf.isc -->
@@ -281,8 +281,8 @@
 <!-- SCRIPT START -->
 
     <!-- VideoLightBox -->
-      	<script src="assets/videolb/jquery.tools.min.js" type="text/javascript"></script>
-      	<script src="assets/videolb/videolightbox.js" type="text/javascript"></script>
+      	<script src="assets/videolb/js/jquery.tools.min.js" type="text/javascript"></script>
+      	<script src="assets/videolb/js/videolightbox.js" type="text/javascript"></script>
 
     <!-- Google Analytics -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
