--- a/src/videos.html
+++ b/src/videos.html
@@ -149,11 +149,11 @@
                     <li><a href="comics.html"
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
-                           data-ga-label="View Comic Gallery"><mark>Comics</mark></a></li>
-                    <li><a href="videos.html"
+                           data-ga-label="View Comic Gallery">Comics</a></li>
+                    <li><a href="videos.html" class="active"
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
-                           data-ga-label="View the Videos">Videos</a></li>
+                           data-ga-label="View the Videos"><mark>Videos</mark></a></li>
                     <li><a href="about.html"
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
