--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
                     <li><a href="comics.html"
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
-                           data-ga-label="View Comic Gallery"><mark>Comics</mark></a></li>
+                           data-ga-label="View Comic Gallery">Comics</a></li>
                     <li><a href="videos.html"
                            data-ga-category="Outbound links"
                            data-ga-action="Nav click"
@@ -354,7 +354,7 @@
 
         </script>
 
-<!-- END -->
+<!-- SCRIPT END -->
     </body>
 </html>
 <!-- Built with <3 by Espeñiol. ;-) -->
