--- a/src/about.html
+++ b/src/about.html
@@ -159,11 +159,11 @@
 
                 <div class="cta-option">
                     <a class="btn btn-alt"
-                       href="videos.html"
+                       href="#"
                        data-ga-category="Outbound links"
-                       data-ga-action="Videos"
-                       data-ga-label="Videos">
-                        Videos
+                       data-ga-action="Start tour!"
+                       data-ga-label="Start tour!">
+                        Start tour!
                     </a>
                 </div>
             </div>
@@ -174,9 +174,7 @@
             <div class="container">
                 <h2>About us</h2>
 
-                <div class="grid">
                     <p>INFORMATIONS here!!!</p>
-                </div>
 
             </div>
         </div>
