--- a/src/about.html
+++ b/src/about.html
@@ -159,7 +159,7 @@
 
                 <div class="cta-option">
                     <a class="btn btn-alt"
-                       href="#"
+                       href="#authors"
                        data-ga-category="Outbound links"
                        data-ga-action="Start tour!"
                        data-ga-label="Start tour!">
@@ -171,15 +171,17 @@
         </div>
 
         <div class="site-section">
+        <a name="authors">
             <div class="container">
-                <h2>About us</h2>
+                <h2>The Authors</h2>
 
                     <p>INFORMATIONS here!!!</p>
 
             </div>
+        </a>
         </div>
 
-        <div class="aside">
+        <div class="aside" name="authors">
             <div class="container">
                 <ul class="inline-block-list">
                     <li><a href="/blog"
