--- a/src/about.html
+++ b/src/about.html
@@ -171,14 +171,12 @@
         </div>
 
         <div class="site-section">
-        <a name="authors">
             <div class="container">
-                <h2>The Authors</h2>
+                <h2><a name="authors">The Authors</a></h2>
 
                     <p>INFORMATIONS here!!!</p>
 
             </div>
-        </a>
         </div>
 
         <div class="aside" name="authors">
