--- a/src/about.html
+++ b/src/about.html
@@ -227,13 +227,8 @@
 
                     <p>INFORMATIONS here!!!</p>
 
-                <div class="cta-option" id="dialog" title="Basic dialog">
-                    <a class="btn btn-alt"
-                       data-ga-category="Outbound links"
-                       data-ga-action="Finished"
-                       data-ga-label="Finished">
-                        Congratulation! You're finished. Go back to the top.
-                    </a>
+                <div class="cta-option" id="dialog" title="Destination">
+                    <p>Congratulation! You're finished. Go back to the top.</p>
                 </div>
             </div>
         </div>
