--- a/src/about.html
+++ b/src/about.html
@@ -227,7 +227,7 @@
 
                     <p>INFORMATIONS here!!!</p>
 
-                <div class="cta-option" id="dialog" title="Destination">
+                <div id="dialog" title="Destination">
                     <p>Congratulation! You're finished. Go back to the top.</p>
                 </div>
             </div>
