--- a/src/about.html
+++ b/src/about.html
@@ -46,17 +46,6 @@
             <link type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/ui-darkness/jquery-ui.css" rel="stylesheet">
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
             <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-            <!-- jQuery UI Dialog -->
-                <link rel="stylesheet" href="//code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
-                <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-                <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
-                <link rel="stylesheet" href="/resources/demos/style.css">
-
-                <script>
-                    $(function() {
-                    $( "#dialog" ).dialog();
-                    });
-                </script>
 
     <!-- BOWER -->
         <!-- Moment.js -->
@@ -227,9 +216,14 @@
 
                     <p>INFORMATIONS here!!!</p>
 
-                <div id="dialog" title="Destination">
-                    <p>Congratulation! You're finished. Go back to the top.</p>
-                </div>
+                <div class="cta-option">
+                    <a class="btn btn-alt"
+                       href="about.html"
+                       data-ga-category="Outbound links"
+                       data-ga-action="Destination"
+                       data-ga-label="Destination">
+                        Congratulation! You're finished. Go back to the top.
+                    </a>
             </div>
         </div>
 
