--- a/src/about.html
+++ b/src/about.html
@@ -224,6 +224,7 @@
                        data-ga-label="Destination">
                         Congratulation! You're finished. Go back to the top.
                     </a>
+                </div>
             </div>
         </div>
 
