--- a/src/index.html
+++ b/src/index.html
@@ -197,20 +197,20 @@
                         <h3><span class="star">&#x2605;</span> Espeñiol's quote</h3>
                         <p>&#x2039; The true character of a dog is not at the first meeting but at the last! &#x203a;</p>
                     </div>
-
+                <br/>
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Dolinj's quote</h3>
                         <p>&#x2039; Stupid people have unnecessary thoughts. Only the best, it does not hide! &#x203a;</p>
                     </div>
-                <br>
+                <br/>
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Jack Asbilph's quote</h3>
                         <p>&#x2039; Take your work seriously, but never yourself! &#x203a;</p>
                     </div>
-                <br>
+                <br/>
                     <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> <em>Quote of the whole Jack's Dogs Family</em></h3>
-                        <p>&#x2039; We all live under the same sky, but we do not all have the same horizon! &#x203a;</p>
+                        <h3><span class="star">&#x2605;</span> <i>Quote of the whole Jack's Dogs Family</i></h3>
+                        <p>&#x2039; <i>We all live under the same sky, but we do not all have the same horizon!</i> &#x203a;</p>
                     </div>
                 </div>
 
