--- a/src/index.html
+++ b/src/index.html
@@ -195,22 +195,23 @@
                 <div class="grid">
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Espeñiol's quote</h3>
-                        <p>&#x2039; The true character of a dog is not at the first meeting but at the last! &#x203a;</p>
+                        <p>„ The true character of a dog is not at the first meeting but at the last! “</p>
                     </div>
                 <br/>
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Dolinj's quote</h3>
-                        <p>&#x2039; Stupid people have unnecessary thoughts. Only the best, it does not hide! &#x203a;</p>
+                        <p>„ Stupid people have unnecessary thoughts. Only the best, it does not hide! “</p>
                     </div>
                 <br/>
                     <div class="grid-cell">
                         <h3><span class="star">&#x2605;</span> Jack Asbilph's quote</h3>
-                        <p>&#x2039; Take your work seriously, but never yourself! &#x203a;</p>
+                        <p>„ Take your work seriously, but never yourself! “</p>
                     </div>
                 <br/>
+                <br/>
                     <div class="grid-cell">
-                        <h3><span class="star">&#x2605;</span> <i>Quote of the whole Jack's Dogs Family</i></h3>
-                        <p>&#x2039; <i>We all live under the same sky, but we do not all have the same horizon!</i> &#x203a;</p>
+                        <h3><span class="star">&#x2605;</span> <strong><i>Quote of the whole Jack's Dogs Family</i></strong></h3>
+                        <p>„ <i>We all live under the same sky, but we do not all have the same horizon!</i> “</p>
                     </div>
                 </div>
 
